virtual-service-details-80-20.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: details
spec:
  hosts:
    - details
  http:
  - route:
    - destination:
        host: details
        subset: v1
      weight: 80
    - destination:
        host: details
        subset: v2
      weight: 20
