vs-dr-ratings.yaml
kind: DestinationRule
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: ratings
spec:
  host: ratings
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
  subsets:
    - labels:
        version: v1
      name: v1
---
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: ratings
spec:
  hosts:
    - ratings
  gateways: ~
  http:
    - route:
        - destination:
            host: ratings
            subset: v1
          weight: 100
  tcp: ~
  tls: ~
